# Cyber-Shield

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf  vercel.json
api/: index.py  requirements.txt
config/: response_policies.json  system_config.json
docs/: API.md
frontend/: .eslintrc.js  package-lock.json  package.json  vercel.build.sh
frontend/public/: index.html
frontend/src/: App.js  config.js
frontend/src/components/: AgentInteractionPanel.js  AttackSimulationWorkspace.js  ThreatDashboard.js
frontend/src/services/: api.js
js_agents/: classifierAgent.js  hunterAgent.js  responseAgent.js
js_environment/: attackInjection.js  dataCollector.js  networkSimulation.js
js_run/: runMultiAgentSystem.js
models/: llm_classifier.py  reinforcement_learning.py
nginx/conf.d/: default.conf
python_agents/: api_server.py  classifier_agent.py  hunter_agent.py  response_agent.py
tests/python/: test_api_server.py  test_classifier_agent.py  test_hunter_agent.py  test_model_manager.py
utils/: logger.py  model_manager.py  rag_retrieval.py
