[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybershield"
version = "1.0.0"
description = "Autonomous cyber defense system using multi-agent AI"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["python_agents", "utils"]